2013-06-17  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r16690.

	* src/gsad.c (import_report_format_omp): Switch to new style so that
	filtering is preserved.

	* src/html/omp.xsl (html-create-report-format-form)
	(html-edit-report-format-form): Add missing filter params.

2013-06-17  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r16625. Patch by Hani Benhabiles.

	* src/gsad_omp.c (create_override, create_note): Validate port value
	when entered manually. Don't validate values coming from results dialog.
	Slightly modified original patch for OpenVAS 6.

2013-06-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r16187. Patch by Hani Benhabiles.

	* src/gsad_omp.c (save_alert_omp): Don't send next element.

2013-06-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump to 4.0.2.

	* CMakeLists.txt: Updated version number.

	* src/html/help.xsl: Updated version number.

2013-06-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 4.0.1 release.

	* CHANGES: Updated.

2013-06-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (powerfilter.html, view_report.html): Add note about
	limitations of result powerfilter.

2013-06-04  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport part of r15748.

	* src/gsad_omp.c (save_task_omp): Prepare command format string
	beforehand, otherwise XML alerts are escaped.

2013-06-04  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r16551.

	* src/gsad_omp.c (get_task): Get delta report from delta_report_id
	instead of report_id, becase delta_id might be passed by other actions
	like Delete.

	* src/html/omp.xsl (report): Send delta report in delta_report_id.

2013-05-13  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r16307.

	* src/html/omp.xsl (task [details], html-edit-task-form): Correct help
	links.

	* src/html/help.xsl (task_details.html): Remove tasksummary anchor.  Add