@@ -1,3 +1,8 @@
+2013-06-18  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* src/gsad_omp.c (create_override, create_note): Use friendlier error
+	message when an invalid port is provided.
+
 2013-06-17  Matthew Mundell <matthew.mundell@greenbone.net>
 
 	Backport r16690.
